adds heder for the big screen size

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,9 @@
 /* Base */
 @import 'base/typography';
 @import 'base/button';
-@import 'base/list';
+@import 'base/information';
 @import 'base/menu';
+@import 'base/header';
 
 /* Components */
 @import 'components/section';
