--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,8 @@
 /* Colors */
-$color-primary: #EC421F;
-$color-black: #020200;
-$color-gray-light: #F5F5F5;
-$color-gray: #A7A7A7;
-
+$color-white: #fff;
+$color-black: #000;
 
 /* Fonts */
-$font-family: -apple-system, BlinkMacSystemFont;
 $font-family-serif: Georgia;
-$font-size-base: 16px;
+$font-weight: bold;
+
