--- a/src/styles/base/menu.scss
+++ b/src/styles/base/menu.scss
@@ -1,20 +1,55 @@
 .menu {
-    text-transform: uppercase;
-    text-align: center;
-    &__list {
-        list-style-type: none;
-        margin: 10px 0 10px 0;
-        padding: 0;
-    }
-    &__link {
-        color: $color-black;
 
-        &:hover {
-            color: $color-primary;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 10px;
+
+    @media (max-width:  1200px) {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__logo {
+        height: 80px;
+        display: inline;
+        padding-left: 10px;
+    }
+
+    &__list {
+        list-style: none;
+        margin-bottom: 0;
+        text-align: left;
+        padding: 0;
+
+        @media (max-width: 992px) {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            overflow: auto;
+            padding-left: 10px;   
+            margin-top: 20px;        
+        }
+
+        @media (max-width: 1200px) {
+            margin-top: 20px;                    
+        }
+
+    }
+
+    &__item {
+        display: inline;
+        font-size: 25px;
+        color: $color-white;
+        font-weight: $font-weight;
+
+        @media (max-width:  992px) {
+            // margin-top: 20px;
+            margin-right: 30px;
+        }
+        &:not(:last-child) {
+           margin-right: 60px;            
         }
     }
-    & li {
-        display: inline;
-        margin: 0 10px 0 10px;
-    }
+
 }
