changes header and adds img background

--- a/src/styles/base/header.scss
+++ b/src/styles/base/header.scss
@@ -1,5 +1,7 @@
 .header-background {
-  background-color: pink;
-  background-image: url('');
+  // background-color: pink;
+  background-image: url('../assets/img/NO_env_glb_ho_2136.jpg');
+  // background-position: center;
+  background-size: cover;
   padding: 20px;
 }
