--- a/src/styles/base/information.scss
+++ b/src/styles/base/information.scss
@@ -10,11 +10,12 @@
     }
 
   &__title {
-    font-size: 70px;
+    font-size: 60px;
     text-align: center;
     color: $color-black; 
     background-color: $color-white;
-    max-width: 800px;
+    max-width: 700px;
+    padding: 10px;
 
     @media (max-width: 992px) {
       font-size: 50px; 
@@ -23,7 +24,7 @@
     @media (max-width: 576px) {
       font-size: 40px;
     } 
-     
+
   }
 
   &__subtitle {
